--- a/.classpath
+++ b/.classpath
@@ -23,6 +23,7 @@
 	<classpathentry kind="src" path="RingsDesktop/resources"/>
 	<classpathentry kind="src" path="OptimalZoo/src"/>
 	<classpathentry kind="src" path="Rings/test"/>
+	<classpathentry kind="src" path="Replicator/test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
