--- a/GraphPersist/pom.xml
+++ b/GraphPersist/pom.xml
@@ -6,6 +6,21 @@
 	<groupId>io.almostrealism</groupId>
 	<artifactId>GraphPersist</artifactId>
 	<version>0.1-rc</version>
+	
+    <build>
+		<sourceDirectory>src</sourceDirectory>
+		<testSourceDirectory>test</testSourceDirectory>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 	<dependencies>
 		<dependency>
