--- a/FeedGrowth/pom.xml
+++ b/FeedGrowth/pom.xml
@@ -8,16 +8,38 @@
     <artifactId>FeedGrowth</artifactId>
     <version>0.1-rc</version>
 	
+    <build>
+		<sourceDirectory>src</sourceDirectory>
+		<testSourceDirectory>test</testSourceDirectory>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	
     <dependencies>
         <dependency>
             <groupId>com.almostrealism</groupId>
             <artifactId>Replicator</artifactId>
-            <version>LATEST</version>
+            <version>0.1-rc</version>
         </dependency>
         <dependency>
             <groupId>com.almostrealism</groupId>
             <artifactId>PhotonField</artifactId>
-            <version>LATEST</version>
+            <version>0.1-rc</version>
         </dependency>
+        
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 </project>
