--- a/FlowTree/pom.xml
+++ b/FlowTree/pom.xml
@@ -6,18 +6,33 @@
 	<groupId>org.almostrealism</groupId>
 	<artifactId>FlowTree</artifactId>
 	<version>0.1-rc</version>
-
+    
+    <build>
+		<sourceDirectory>src</sourceDirectory>
+		<testSourceDirectory>test</testSourceDirectory>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.almostrealism</groupId>
 			<artifactId>Common</artifactId>
-			<version>LATEST</version>
+			<version>0.1-rc</version>
 		</dependency>
 
 		<dependency>
 			<groupId>io.almostrealism</groupId>
 			<artifactId>TreeView</artifactId>
-			<version>LATEST</version>
+			<version>0.1-rc</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.jcraft/jsch -->
@@ -26,13 +41,12 @@
 			<artifactId>jsch</artifactId>
 			<version>0.1.53</version>
 		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/hsqldb/hsqldb -->
+		
+		<!-- https://mvnrepository.com/artifact/org.hsqldb/hsqldb -->
 		<dependency>
-			<groupId>hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-			<version>1.8.0.10</version>
+		    <groupId>org.hsqldb</groupId>
+		    <artifactId>hsqldb</artifactId>
+		    <version>2.3.4</version>
 		</dependency>
-
 	</dependencies>
 </project>
