--- a/OptimalZoo/pom.xml
+++ b/OptimalZoo/pom.xml
@@ -6,12 +6,27 @@
 	<groupId>org.almostrealism</groupId>
 	<artifactId>OptimalZoo</artifactId>
 	<version>0.1-rc</version>
-
+    
+    <build>
+		<sourceDirectory>src</sourceDirectory>
+		<testSourceDirectory>test</testSourceDirectory>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.almostrealism</groupId>
 			<artifactId>FlowTree</artifactId>
-			<version>LATEST</version>
+			<version>0.1-rc</version>
 		</dependency>
 	</dependencies>
 </project>
