--- a/PhotonField/pom.xml
+++ b/PhotonField/pom.xml
@@ -7,12 +7,27 @@
     <groupId>com.almostrealism</groupId>
     <artifactId>PhotonField</artifactId>
     <version>0.1-rc</version>
-
+    
+    <build>
+		<sourceDirectory>src</sourceDirectory>
+		<testSourceDirectory>test</testSourceDirectory>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	
     <dependencies>
         <dependency>
             <groupId>com.almostrealism</groupId>
             <artifactId>Rings</artifactId>
-            <version>LATEST</version>
+            <version>0.1-rc</version>
         </dependency>
     </dependencies>
 </project>
