--- a/Replicator/pom.xml
+++ b/Replicator/pom.xml
@@ -7,16 +7,37 @@
 	<artifactId>Replicator</artifactId>
 	<version>0.1-rc</version>
 	
+    <build>
+		<sourceDirectory>src</sourceDirectory>
+		<testSourceDirectory>test</testSourceDirectory>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.almostrealism</groupId>
 			<artifactId>OptimalZoo</artifactId>
-			<version>LATEST</version>
+			<version>0.1-rc</version>
 		</dependency>
 		<dependency>
 			<groupId>com.almostrealism</groupId>
 			<artifactId>Rings</artifactId>
-			<version>LATEST</version>
+			<version>0.1-rc</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
