--- a/RingsDesktop/pom.xml
+++ b/RingsDesktop/pom.xml
@@ -8,25 +8,33 @@
     <artifactId>RingsDesktop</artifactId>
     <version>0.1-rc</version>
 	
+    <build>
+		<sourceDirectory>src</sourceDirectory>
+		<testSourceDirectory>test</testSourceDirectory>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	
     <dependencies>
         <dependency>
             <groupId>com.almostrealism</groupId>
             <artifactId>Rings</artifactId>
-            <version>LATEST</version>
+            <version>0.1-rc</version>
         </dependency>
         
-        <!-- https://mvnrepository.com/artifact/com.sun.media/jai_imageio -->
+		<!-- https://mvnrepository.com/artifact/com.github.jai-imageio/jai-imageio-core -->
 		<dependency>
-		    <groupId>com.sun.media</groupId>
-		    <artifactId>jai_imageio</artifactId>
-		    <version>1.1</version>
-		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/com.sun.media/jai_codec -->
-		<dependency>
-		    <groupId>com.sun.media</groupId>
-		    <artifactId>jai_codec</artifactId>
-		    <version>1.1.2_01</version>
+		    <groupId>com.github.jai-imageio</groupId>
+		    <artifactId>jai-imageio-core</artifactId>
+		    <version>1.3.1</version>
 		</dependency>
     </dependencies>
 </project>
