--- a/TreeView/pom.xml
+++ b/TreeView/pom.xml
@@ -7,7 +7,22 @@
     <groupId>io.almostrealism</groupId>
     <artifactId>TreeView</artifactId>
     <version>0.1-rc</version>
-
+    
+    <build>
+		<sourceDirectory>src</sourceDirectory>
+		<testSourceDirectory>test</testSourceDirectory>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	
     <dependencies>
         <dependency>
             <groupId>org.almostrealism</groupId>
