--- a/GraphPersist/pom.xml
+++ b/GraphPersist/pom.xml
@@ -25,7 +25,7 @@
 		<dependency>
 			<groupId>org.almostrealism</groupId>
 			<artifactId>Common</artifactId>
-			<version>LATEST</version>
+			<version>0.1-rc</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/c3p0/c3p0 -->
