Specify source and test directories.

--- a/GraphPersist/pom.xml
+++ b/GraphPersist/pom.xml
@@ -9,6 +9,8 @@
 	
     <build>
 		<sourceDirectory>src</sourceDirectory>
+		<testSourceDirectory>test</testSourceDirectory>
+		
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
