--- a/MatrixView/pom.xml
+++ b/MatrixView/pom.xml
@@ -27,7 +27,7 @@
 		<dependency>
 			<groupId>org.almostrealism</groupId>
 			<artifactId>Common</artifactId>
-			<version>LATEST</version>
+			<version>0.1-rc</version>
 		</dependency>
 	</dependencies>
 </project>
