--- a/FlowTree/pom.xml
+++ b/FlowTree/pom.xml
@@ -19,6 +19,10 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<plugin>
+             	<artifactId>maven-resources-plugin</artifactId>
+             	<version>2.7</version>
+             </plugin> 
 		</plugins>
 	</build>
 	
