--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -35,11 +35,18 @@
 		    <version>2.8.3</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
+		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-api</artifactId>
+		    <version>2.8.2</version>
+		</dependency>
+		
 		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
 		<dependency>
 		    <groupId>org.apache.logging.log4j</groupId>
 		    <artifactId>log4j-core</artifactId>
-		    <version>2.6.2</version>
+		    <version>2.8.2</version>
 		</dependency>
     </dependencies>
 </project>
