--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -7,7 +7,10 @@
     <groupId>org.almostrealism</groupId>
     <artifactId>Common</artifactId>
     <version>0.1-rc</version>
-    
+
+	<!-- Output to jar format -->
+	<packaging>jar</packaging>
+
     <build>
 		<sourceDirectory>src</sourceDirectory>
 		<testSourceDirectory>test</testSourceDirectory>
