--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -51,5 +51,13 @@
 		    <artifactId>log4j-core</artifactId>
 		    <version>2.8.2</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>javax.servlet-api</artifactId>
+		    <version>4.0.0-b07</version>
+		    <scope>provided</scope>
+		</dependency>
     </dependencies>
 </project>
