--- a/Rings/.classpath
+++ b/Rings/.classpath
@@ -19,6 +19,10 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="game"/>
+	<classpathentry kind="src" path="geometry"/>
+	<classpathentry kind="src" path="shading"/>
+	<classpathentry kind="src" path="ui"/>
+	<classpathentry kind="src" path="engine"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
