Corrected location of GraphPersist folder.

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -10,7 +10,7 @@ pipelines:
           
           
           # GraphPersist Dependencies
-          - cd ../GraphPersist
+          - cd GraphPersist
           - mvn dependency:copy-dependencies
           - mvn install
           
