--- a/Rings/pom.xml
+++ b/Rings/pom.xml
@@ -6,18 +6,40 @@
 	<groupId>com.almostrealism</groupId>
 	<artifactId>Rings</artifactId>
 	<version>0.1-rc</version>
-    
-    <build>
-		<sourceDirectory>src, geometry, shading, ui, engine</sourceDirectory>
-		<testSourceDirectory>test</testSourceDirectory>
+
+	<!-- Output to jar format -->
+	<packaging>jar</packaging>
+
+	<build>
+		<sourceDirectory>src</sourceDirectory>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.5.1</version>
+				<version>3.7.0</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>add-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>geometry</source>
+								<source>shading</source>
+								<source>ui</source>
+								<source>engine</source>
+							</sources>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
