--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,56 +8,24 @@ pipelines:
           # Maven details
           - mvn --version
           
+          # Dead Simple Maven Proxy
+          # - export DSMP_HOME=./dsmp
+          # - java -classpath ${DSMP_HOME}:${DSMP_HOME}/dsmp-1.1-jar-with-dependencies.jar de.pdark.dsmp.Main ${DSMP_HOME}
           
-          # GraphPersist Dependencies
-          - cd GraphPersist
+          - rm /usr/share/maven/conf/settings.xml
+          - cp ./settings.xml /usr/share/maven/conf/settings.xml
+
+          # FlowTree Dependencies
           - mvn dependency:copy-dependencies
-          - mvn install
           
-          
-          # TreeView Dependencies
-          - cd ../TreeView
-          - mvn dependency:copy-dependencies
-          - mvn install
-          
-          
-          # OptimalZoo Dependencies
-          - cd ../OptimalZoo
-          - mvn dependency:copy-dependencies
-          - mvn install
-          
-          
-          # Rings Dependencies
-          - cd ../Rings
-          - mvn dependency:copy-dependencies
-          - mvn install
-          
-          
-          # PhotonField Dependencies
-          - cd ../PhotonField
-          - mvn dependency:copy-dependencies
-          - mvn install
-          
-          
-          # ArtifactDetector Dependencies
-          - cd ../ArtifactDetector
-          - mvn dependency:copy-dependencies
-          - mvn install
-          
-          
-          # Replicator Dependencies
-          - cd ../Replicator
-          - mvn dependency:copy-dependencies
-          - mvn install
-          
-          
-          # Explorer Dependencies
-          - cd ../Explorer
-          - mvn dependency:copy-dependencies
-          - mvn install
-          
-          
-          # FeedGrowth Dependencies
-          - cd ../FeedGrowth
-          - mvn dependency:copy-dependencies
-          - mvn install
+          # Install Rings
+          - mvn clean install
+
+          # Deploy to repository
+          - mvn deploy
+
+          # Deploy to downloads
+#          - curl -X POST "https://${BB_AUTH_STRING}@api.bitbucket.org/2.0/repositories/${BITBUCKET_REPO_OWNER}/${BITBUCKET_REPO_SLUG}/downloads" --form files=@"target/FlowTree-0.1-rc.jar"
+#          - curl -X POST "https://${BB_AUTH_STRING}@api.bitbucket.org/2.0/repositories/${BITBUCKET_REPO_OWNER}/${BITBUCKET_REPO_SLUG}/downloads" --form files=@"target/dependency/TreeView-0.1-rc.jar"
+#          - curl -X POST "https://${BB_AUTH_STRING}@api.bitbucket.org/2.0/repositories/${BITBUCKET_REPO_OWNER}/${BITBUCKET_REPO_SLUG}/downloads" --form files=@"target/dependency/hsqldb-2.3.4.jar"
+#          - curl -X POST "https://${BB_AUTH_STRING}@api.bitbucket.org/2.0/repositories/${BITBUCKET_REPO_OWNER}/${BITBUCKET_REPO_SLUG}/downloads" --form files=@"target/dependency/jsch-0.1.53.jar"
