Removed unused imports, added dependency on Common, minor changes to workspace xml.

--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.almostrealism</groupId>
+			<artifactId>Common</artifactId>
+			<version>0.1-rc</version>
+		</dependency>
+
+		<dependency>
 			<groupId>io.almostrealism</groupId>
 			<artifactId>MatrixView</artifactId>
 			<version>0.1-rc</version>
