--- a/pom.xml
+++ b/pom.xml
@@ -42,13 +42,13 @@
 					</execution>
 				</executions>
 			</plugin>
-			<plugin>
+<!-- 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.19.1</version>
 				<configuration>
 				</configuration>
-			</plugin>
+			</plugin> -->
 		</plugins>
 	</build>
 	
