--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
 		<dependency>
 			<groupId>org.almostrealism</groupId>
 			<artifactId>Common</artifactId>
-			<version>0.4-rc</version>
+			<version>0.4</version>
 		</dependency>
 
 		<dependency>
