--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.almostrealism</groupId>
 	<artifactId>Rings</artifactId>
-	<version>0.3</version>
+	<version>0.4-rc</version>
 
 	<!-- Output to jar format -->
 	<packaging>jar</packaging>
@@ -61,7 +61,7 @@
 		<dependency>
 			<groupId>org.almostrealism</groupId>
 			<artifactId>Common</artifactId>
-			<version>0.5</version>
+			<version>0.6-rc</version>
 		</dependency>
 
 		<dependency>
