--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,13 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.joml</groupId>
+			<artifactId>joml</artifactId>
+			<version>1.9.9</version>
+		</dependency>
+
 	</dependencies>
 
 	<distributionManagement>
