--- a/gl/pom.xml
+++ b/gl/pom.xml
@@ -28,5 +28,17 @@
 			<artifactId>shading</artifactId>
 			<version>0.11</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.jogamp.gluegen</groupId>
+			<artifactId>gluegen-rt-main</artifactId>
+			<version>2.3.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jogamp.jogl</groupId>
+			<artifactId>jogl-all-main</artifactId>
+			<version>2.3.2</version>
+		</dependency>
 	</dependencies>
 </project>
