--- a/network/pom.xml
+++ b/network/pom.xml
@@ -22,5 +22,11 @@
 			<artifactId>raytracer</artifactId>
 			<version>0.11</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.almostrealism</groupId>
+			<artifactId>FlowTreeAPI</artifactId>
+			<version>0.9</version>
+		</dependency>
 	</dependencies>
 </project>
