Added ar-replicate, missing from earlier copy of Replicator modules

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<module>audio-health</module>
 		<module>audio-optimize</module>
 		<module>synth</module>
+		<module>replicate</module>
 	</modules>
 
 	<!-- Output to jar format -->
