--- a/audio-optimize/pom.xml
+++ b/audio-optimize/pom.xml
@@ -16,4 +16,11 @@
 		<maven.compiler.target>14</maven.compiler.target>
 	</properties>
 
+	<dependencies>
+		<dependency>
+			<groupId>com.almostrealism</groupId>
+			<artifactId>ar-synth</artifactId>
+			<version>0.12</version>
+		</dependency>
+	</dependencies>
 </project>
