--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -19,7 +19,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.almostrealism</groupId>
-			<artifactId>primitives</artifactId>
+			<artifactId>ar-primitives</artifactId>
 			<version>0.13</version>
 		</dependency>
 	</dependencies>
