--- a/photonfield/pom.xml
+++ b/photonfield/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>Rings</artifactId>
 		<groupId>com.almostrealism</groupId>
-		<version>0.13</version>
+		<version>${rings.version}</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -20,19 +20,19 @@
 		<dependency>
 			<groupId>org.almostrealism</groupId>
 			<artifactId>ar-flowtree</artifactId>
-			<version>0.12</version>
+			<version>${flowtree.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.almostrealism</groupId>
 			<artifactId>ar-absorption</artifactId>
-			<version>0.13</version>
+			<version>${rings.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.almostrealism</groupId>
 			<artifactId>ar-network</artifactId>
-			<version>0.13</version>
+			<version>${rings.version}</version>
 		</dependency>
 	</dependencies>
 </project>
