--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,17 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<properties>
+		<common.version>0.42</common.version>
+		<ichos.version>1.30</ichos.version>
+		<flowtree.version>0.13</flowtree.version>
+		<rings.version>0.14</rings.version>
+	</properties>
+
 	<groupId>com.almostrealism</groupId>
 	<artifactId>Rings</artifactId>
-	<version>0.13</version>
+	<version>${rings.version}</version>
+
 	<modules>
 		<module>raytracer</module>
 		<module>engine</module>
@@ -30,13 +38,13 @@
 		<dependency>
 			<groupId>org.almostrealism</groupId>
 			<artifactId>ar-treeview</artifactId>
-			<version>0.12</version>
+			<version>${flowtree.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.almostrealism</groupId>
 			<artifactId>ar-graphpersist</artifactId>
-			<version>0.12</version>
+			<version>${flowtree.version}</version>
 		</dependency>
 		
 		<dependency>
