--- a/primitives/pom.xml
+++ b/primitives/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>Rings</artifactId>
 		<groupId>com.almostrealism</groupId>
-		<version>0.13</version>
+		<version>${rings.version}</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -20,7 +20,7 @@
 		<dependency>
 			<groupId>com.almostrealism</groupId>
 			<artifactId>engine</artifactId>
-			<version>0.13</version>
+			<version>${rings.version}</version>
 		</dependency>
 	</dependencies>
 </project>
