--- a/primitives/pom.xml
+++ b/primitives/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>Rings</artifactId>
 		<groupId>com.almostrealism</groupId>
-		<version>${rings.version}</version>
+		<version>0.14</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
