Shut down the executor when the PopulationOptimizer is finished. Minor changes to LayeredOrganOptimizer. Do not create a new ComputeContext in HealthCallable if there are no compute requirements specified. Introduced two new modules, for openai and pytorch experimentation.

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
 		<module>synth</module>
 		<module>replicate</module>
 		<module>tensorflow</module>
+		<module>torch</module>
+		<module>openai</module>
 	</modules>
 
 	<!-- Output to jar format -->
