New utility methods in DefaultAudioGenome. Introduced KeyFramer.

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 		<module>tensorflow</module>
 		<module>torch</module>
 		<module>openai</module>
+		<module>keyframing</module>
 	</modules>
 
 	<!-- Output to jar format -->
