Switched to almostrealism.jfrog.io.

--- a/pom.xml
+++ b/pom.xml
@@ -62,19 +62,29 @@
 	</dependencies>
 
 	<distributionManagement>
+<!--		<repository>-->
+<!--			<id>internal</id>-->
+<!--			<url>http://mvn.almostrealism.org:8080/repository/internal/</url>-->
+<!--		</repository>-->
 		<repository>
-			<id>internal</id>
-			<url>http://mvn.almostrealism.org:8080/repository/internal/</url>
+			<id>central</id>
+			<url>https://almostrealism.jfrog.io/artifactory/default-libs-release</url>
 		</repository>
 	</distributionManagement>
 
 	<repositories>
 		<repository>
-			<id>internal</id>
-			<name>Archiva Managed Internal Repository</name>
-			<url>http://mvn.almostrealism.org:8080/repository/internal/</url>
+			<id>central</id>
+			<url>https://almostrealism.jfrog.io/artifactory/default-libs-release</url>
 			<releases><enabled>true</enabled></releases>
 			<snapshots><enabled>true</enabled></snapshots>
 		</repository>
+<!--		<repository>-->
+<!--			<id>internal</id>-->
+<!--			<name>Archiva Managed Internal Repository</name>-->
+<!--			<url>http://mvn.almostrealism.org:8080/repository/internal/</url>-->
+<!--			<releases><enabled>true</enabled></releases>-->
+<!--			<snapshots><enabled>true</enabled></snapshots>-->
+<!--		</repository>-->
 	</repositories>
 </project>
