--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<properties>
-		<common.version>0.49</common.version>
-		<ichos.version>1.37</ichos.version>
-		<flowtree.version>0.13</flowtree.version>
+		<common.version>0.50</common.version>
+		<ichos.version>1.38</ichos.version>
+		<flowtree.version>0.14</flowtree.version>
 	</properties>
 
 	<groupId>com.almostrealism</groupId>
 	<artifactId>Rings</artifactId>
-	<version>0.21</version>
+	<version>0.22</version>
 
 	<modules>
 		<module>raytracer</module>
@@ -35,13 +35,13 @@
 	
 	<dependencies>
 		<dependency>
-			<groupId>org.almostrealism</groupId>
+			<groupId>io.flowtree</groupId>
 			<artifactId>ar-treeview</artifactId>
 			<version>${flowtree.version}</version>
 		</dependency>
 
 		<dependency>
-			<groupId>org.almostrealism</groupId>
+			<groupId>io.flowtree</groupId>
 			<artifactId>ar-graphpersist</artifactId>
 			<version>${flowtree.version}</version>
 		</dependency>
