--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,10 @@
 	<properties>
 		<common.version>0.52</common.version>
 		<flowtree.version>0.16</flowtree.version>
+
+		<grpc.version>1.53.0</grpc.version>
+		<protobuf.version>3.21.7</protobuf.version>
+		<protoc.version>3.21.7</protoc.version>
 	</properties>
 
 	<groupId>com.almostrealism</groupId>
@@ -62,6 +66,18 @@
 		</dependency>
 
 	</dependencies>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>io.grpc</groupId>
+				<artifactId>grpc-bom</artifactId>
+				<version>${grpc.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<distributionManagement>
 <!--		<repository>-->
