--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,9 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<properties>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
+
 		<common.version>0.52</common.version>
 		<flowtree.version>0.16</flowtree.version>
 
