Migrated OpenAI client into ar-openai, and sketched out some basic concepts that would be required to do chain of thought reasoning and task subdivision for expanding the capabilities of an LLM despite its small attention window.

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 		<module>keyframing</module>
 		<module>remote</module>
 		<module>remote-server</module>
+		<module>aware</module>
 	</modules>
 
 	<!-- Output to jar format -->
