--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,7 @@ audio/Kit/**
 audio/Library/**
 audio/pattern-factory.json
 audio/Population.xml
+pattern-factory.json
+Population.xml
 
 lib/**SNAPSHOT.jar
