Consolidate Evaluable in ParameterizedEnvelope so that all instances share the same one. Introduced CellFeatures::getInstance and EnvelopeFeatures::getInstance. Increased population size in AudioSceneOptimizer. Updated gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,11 @@ audio/Kit/**
 audio/Library/**
 audio/pattern-factory.json
 audio/Population.xml
+
+results/**
+health/**
 pattern-factory.json
 Population.xml
 
+Extensions/**
 lib/**SNAPSHOT.jar
