Introduced WaveData::toCell and updated WavFile and CellFeatures::w as a result. Moved RayTracingTest back into main so that RayTracingDiagnostics (moved into another repo) can depend on it. Some pom cleanup.

--- a/network/pom.xml
+++ b/network/pom.xml
@@ -26,8 +26,18 @@
 
 		<dependency>
 			<groupId>io.flowtree</groupId>
+			<artifactId>ar-graphpersist</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>io.flowtree</groupId>
 			<artifactId>ar-flowtreeapi</artifactId>
-			<version>${flowtree.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
