--- a/audio/pom.xml
+++ b/audio/pom.xml
@@ -17,5 +17,16 @@
 			<artifactId>ar-utils</artifactId>
 			<version>${common.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 </project>
