--- a/engine/pom.xml
+++ b/engine/pom.xml
@@ -12,10 +12,15 @@
 	<artifactId>ar-engine</artifactId>
 
 	<dependencies>
+		<!-- TODO  This should not be required -->
+		<dependency>
+			<groupId>org.almostrealism</groupId>
+			<artifactId>ar-space</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.almostrealism</groupId>
 			<artifactId>ar-color</artifactId>
-			<version>${common.version}</version>
 		</dependency>
 	</dependencies>
 </project>
