--- a/treeview/pom.xml
+++ b/treeview/pom.xml
@@ -9,15 +9,12 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<artifactId>ar-visual-space</artifactId>
+	<!-- Output to jar format -->
+	<packaging>jar</packaging>
+
+	<artifactId>ar-treeview</artifactId>
 
 	<dependencies>
-		<dependency>
-			<groupId>com.almostrealism</groupId>
-			<artifactId>ar-visual</artifactId>
-			<version>0.37</version>
-		</dependency>
-
 		<dependency>
 			<groupId>com.almostrealism</groupId>
 			<artifactId>ar-swing</artifactId>
@@ -27,12 +24,14 @@
 		<dependency>
 			<groupId>org.almostrealism</groupId>
 			<artifactId>ar-utils</artifactId>
+			<version>${common.version}</version>
 		</dependency>
 
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<scope>test</scope>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-controls</artifactId>
+			<version>${javafx.version}</version>
+			<classifier>${javafx.classifier}</classifier>
 		</dependency>
 	</dependencies>
 </project>
