Updated NoteAudioContext constructor to default to MAIN Voicing. Updated StatelessSourceNoteAudio to use a Factor rather than a Producer for parameters. Removed deprecated StatelessSourcePatternNote.

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ audio/Library/**
 audio/pattern-factory.json
 audio/Population.xml
 
+audio-space/results/**
+audio-space/Library/**
+
 results/**
 health/**
 pattern-factory.json
