--- a/generate/pom.xml
+++ b/generate/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.almostrealism</groupId>
 		<artifactId>rings</artifactId>
-		<version>0.39</version>
+		<version>0.40</version>
 	</parent>
 
 	<artifactId>ar-generate</artifactId>
@@ -15,7 +15,13 @@
 		<dependency>
 			<groupId>com.almostrealism</groupId>
 			<artifactId>ar-pattern</artifactId>
-			<version>0.39</version>
+			<version>0.40</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.almostrealism</groupId>
+			<artifactId>ar-rings-ml</artifactId>
+			<version>0.40</version>
 		</dependency>
 	</dependencies>
 </project>
