--- a/tensorflow/pom.xml
+++ b/tensorflow/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>rings</artifactId>
 		<groupId>com.almostrealism</groupId>
-		<version>0.39</version>
+		<version>0.40</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
@@ -19,10 +19,8 @@
 
 		<dependency>
 			<groupId>org.tensorflow</groupId>
-			<artifactId>tensorflow-platform</artifactId>
-			<version>0.4.0</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/../lib/tensorflow-core-platform-0.4.0-SNAPSHOT.jar</systemPath>
+			<artifactId>tensorflow-core-platform</artifactId>
+			<version>1.0.0</version>
 		</dependency>
 
 		<dependency>
