Corrected use of SpTokenizer in AudioGen.

--- a/tensorflow/pom.xml
+++ b/tensorflow/pom.xml
@@ -18,6 +18,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>ai.djl.sentencepiece</groupId>
+			<artifactId>sentencepiece</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.tensorflow</groupId>
 			<artifactId>tensorflow-core-platform</artifactId>
 			<version>1.0.0</version>
