Some progress on the raytracing restoration plan.

--- a/pom.xml
+++ b/pom.xml
@@ -210,6 +210,22 @@
 		</dependencies>
 	</dependencyManagement>
 
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.2.5</version>
+					<configuration>
+						<!-- Timeout in seconds for forked test processes (2 minutes default) -->
+						<forkedProcessTimeoutInSeconds>120</forkedProcessTimeoutInSeconds>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+
 	<distributionManagement>
 		<repository>
 			<id>github</id>
