--- a/gl/pom.xml
+++ b/gl/pom.xml
@@ -18,9 +18,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>com.almostrealism</groupId>
-			<artifactId>ar-visual-space</artifactId>
-			<version>0.43</version>
+			<groupId>org.almostrealism</groupId>
+			<artifactId>ar-space</artifactId>
 		</dependency>
 
 		<dependency>
