--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,12 @@
 
 			<dependency>
 				<groupId>org.almostrealism</groupId>
+				<artifactId>ar-render</artifactId>
+				<version>${common.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.almostrealism</groupId>
 				<artifactId>ar-ml</artifactId>
 				<version>${common.version}</version>
 			</dependency>
