--- a/raytracer/pom.xml
+++ b/raytracer/pom.xml
@@ -13,9 +13,8 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.almostrealism</groupId>
-			<artifactId>ar-gl</artifactId>
-			<version>0.43</version>
+			<groupId>org.almostrealism</groupId>
+			<artifactId>ar-render</artifactId>
 		</dependency>
 
 		<dependency>
