--- a/shading/pom.xml
+++ b/shading/pom.xml
@@ -16,5 +16,10 @@
 			<groupId>org.almostrealism</groupId>
 			<artifactId>ar-utils</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.almostrealism</groupId>
+			<artifactId>ar-render</artifactId>
+		</dependency>
 	</dependencies>
 </project>
