--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,6 @@
 		<maven.compiler.target>17</maven.compiler.target>
 
 		<common.version>0.73</common.version>
-		<flowtree.version>0.29</flowtree.version>
 
 		<grpc.version>1.53.0</grpc.version>
 		<protobuf.version>3.21.7</protobuf.version>
@@ -119,21 +118,21 @@
 			</dependency>
 
 			<dependency>
-				<groupId>io.flowtree</groupId>
+				<groupId>org.almostrealism</groupId>
 				<artifactId>ar-flowtree</artifactId>
-				<version>${flowtree.version}</version>
+				<version>${common.version}</version>
 			</dependency>
 
 			<dependency>
-				<groupId>io.flowtree</groupId>
+				<groupId>org.almostrealism</groupId>
 				<artifactId>ar-flowtreeapi</artifactId>
-				<version>${flowtree.version}</version>
+				<version>${common.version}</version>
 			</dependency>
 
 			<dependency>
-				<groupId>io.flowtree</groupId>
+				<groupId>org.almostrealism</groupId>
 				<artifactId>ar-graphpersist</artifactId>
-				<version>${flowtree.version}</version>
+				<version>${common.version}</version>
 			</dependency>
 
 			<dependency>
