Generalized ConditionalAudioSystem and ConditionalAudioScoring to avoid direct use of onnx and moved tokenizer, conditioner and dit model implementations that use onnx into rings-ml module. The generate module is updated to avoid a direct dependency on rings-ml, with classes that require rings-ml moved into the remote module which now depends on both the rings-ml module and (via audio-space) the generate module. This prepares for a migration of some more modules to the common project without including any onnx dependency.

--- a/remote/pom.xml
+++ b/remote/pom.xml
@@ -87,6 +87,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.almostrealism</groupId>
+			<artifactId>ar-rings-ml</artifactId>
+			<version>0.44</version>
+		</dependency>
+
+		<dependency>
 			<groupId>io.grpc</groupId>
 			<artifactId>grpc-stub</artifactId>
 		</dependency>
