--- a/generate/pom.xml
+++ b/generate/pom.xml
@@ -13,14 +13,20 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.almostrealism</groupId>
-			<artifactId>ar-pattern</artifactId>
-			<version>0.44</version>
+			<groupId>org.almostrealism</groupId>
+			<artifactId>ar-ml</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.almostrealism</groupId>
+			<artifactId>ar-ml</artifactId>
+			<classifier>proto</classifier>
+			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>com.almostrealism</groupId>
-			<artifactId>ar-rings-ml</artifactId>
+			<artifactId>ar-pattern</artifactId>
 			<version>0.44</version>
 		</dependency>
 
