--- a/audio-space/pom.xml
+++ b/audio-space/pom.xml
@@ -13,15 +13,13 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.almostrealism</groupId>
-			<artifactId>ar-pattern</artifactId>
-			<version>0.44</version>
+			<groupId>org.almostrealism</groupId>
+			<artifactId>ar-music</artifactId>
 		</dependency>
 
 		<dependency>
-			<groupId>com.almostrealism</groupId>
-			<artifactId>ar-generate</artifactId>
-			<version>0.44</version>
+			<groupId>org.almostrealism</groupId>
+			<artifactId>ar-compose</artifactId>
 		</dependency>
 
 		<dependency>
