--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,6 @@
 	</properties>
 
 	<modules>
-		<module>pattern</module>
 		<module>audio-space</module>
 
 		<module>treeview</module>
@@ -36,7 +35,6 @@
 		<module>tensorflow</module>
 		<module>torch</module>
 		<module>keyframing</module>
-		<module>generate</module>
 		<module>rings-ml</module>
 
 		<module>remote</module>
@@ -100,6 +98,18 @@
 			<dependency>
 				<groupId>org.almostrealism</groupId>
 				<artifactId>ar-audio</artifactId>
+				<version>${common.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.almostrealism</groupId>
+				<artifactId>ar-music</artifactId>
+				<version>${common.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.almostrealism</groupId>
+				<artifactId>ar-compose</artifactId>
 				<version>${common.version}</version>
 			</dependency>
 
