--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,6 @@
 		<module>tensorflow</module>
 		<module>torch</module>
 		<module>keyframing</module>
-		<module>rings-ml</module>
 
 		<module>remote</module>
 		<module>spatial</module>
@@ -127,6 +126,18 @@
 
 			<dependency>
 				<groupId>org.almostrealism</groupId>
+				<artifactId>ar-ml-onnx</artifactId>
+				<version>${common.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.almostrealism</groupId>
+				<artifactId>ar-ml-djl</artifactId>
+				<version>${common.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.almostrealism</groupId>
 				<artifactId>ar-flowtree</artifactId>
 				<version>${common.version}</version>
 			</dependency>
@@ -171,12 +182,6 @@
 				<groupId>ai.djl.sentencepiece</groupId>
 				<artifactId>sentencepiece</artifactId>
 				<version>0.33.0</version>
-			</dependency>
-
-			<dependency>
-				<groupId>com.microsoft.onnxruntime</groupId>
-				<artifactId>onnxruntime</artifactId>
-				<version>1.22.0</version>
 			</dependency>
 
 			<!-- This is not available as a Jar because it is intended for Android -->
