Migrated more classes out of ar-remote module.

--- a/remote/pom.xml
+++ b/remote/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>ar-remote</artifactId>
 
 	<build>
-		<!-- Detect OS and architecture for plugins which depend on native binaries s-->
+		<!-- Detect OS and architecture for plugins which depend on native binaries -->
 		<extensions>
 			<extension>
 				<groupId>kr.motd.maven</groupId>
